[package]
name = "me-learning-opengl"
version = "0.1.0"
authors = ["Zicklag <zicklag@katharostech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.16.1"
image = "0.23.9"
# only needed from chapter 3 on
tobj = "0.1.6"
num = "0.2.0"
rand = "0.5.5"
glow = "0.6.0"
# We must match surfman's supported winit version
winit = "<0.19.4"
surfman = { version = "0.3.0", features = ["sm-x11"] }
